# razorpay_docs_mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_http.bat  start_http.sh
demos/: README.md
demos/demo1_webhook_verification/: PROBLEM.md  broken_webhook.js  solution_hint.md
demos/demo2_payment_capture/: PROBLEM.md  broken_capture.js  solution_hint.md
demos/demo3_subscription_setup/: PROBLEM.md  broken_subscription.py  solution_hint.md
razorpay_docs_mcp/: db.py  ingest.py  refresh.py  search.py  server.py
tests/: test_ingest.py  test_integrator_scenarios.py  test_search.py
tests/fixtures/: llms_sample.txt
